compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__expression_constructor_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n  Person(name: String, age: Int)\n}\npub fn update_person(person: Person) {\n  let constructor = Person\n  constructor(..person)\n}"
---
----- SOURCE CODE

pub type Person {
  Person(name: String, age: Int)
}
pub fn update_person(person: Person) {
  let constructor = Person
  constructor(..person)
}

----- ERROR
error: Invalid record update
  ┌─ /src/one/two.gleam:7:3
  │
7 │   constructor(..person)
  │   ^^^^^^^^^^^ This is not a record constructor

Only record constructors can be used with the update syntax.
